Update build.yml