@@ -108,6 +108,8 @@ allprojects {
       events = setOf(FAILED, SKIPPED)
     }
 
+    jvmArgs("-Dnet.bytebuddy.experimental=true")
+
     val maxWorkerCount = gradle.startParameter.maxWorkerCount
     maxParallelForks = if (maxWorkerCount < 2) 1 else maxWorkerCount / 2
   }
